# pmcgrab

./: .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  DEVELOPMENT.md  README.md  index.html  mkdocs.yml  mypy.ini  objects.inv  paper.py  pyproject.toml  requirements.txt  sitemap.xml
.github/: CONTRIBUTING.md  README.md  SECURITY.md  dependabot.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/workflows/: auto-release.yml  ci.yml  codeql.yml  dependency-review.yml  docs.yml  labeler.yml  pre-commit.yml  publish-on-tag.yml  publish.yml  release-from-main.yml  release.yml  stale.yml  tests.yml  update-deps.yml
about/citation/: index.html
about/license/: index.html
agents/domain/: index.html
agents/issue-tracker/: index.html
agents/triage-labels/: index.html
api/cli/: index.html
api/core/: index.html
api/processing/: index.html
development/architecture/: index.html
development/clean-code-final-plan/: index.html
development/clean-code-implementation-plan/: index.html
development/clean-code-plan-audit/: index.html
development/clean-code-research/: index.html
development/contributing/: index.html
development/release-process/: index.html
development/setup/: index.html
development/testing/: index.html
docs/: index.md
docs/about/: changelog.md  citation.md  license.md
docs/agents/: domain.md  issue-tracker.md
docs/api/: cli.md  core.md  external-services.md  paper.md  parsing.md  processing.md  utilities.md
docs/development/: architecture.md  clean-code-final-plan.md  clean-code-implementation-plan.md  clean-code-plan-audit.md  clean-code-research.md  contributing.md  release-process.md  setup.md  testing.md
docs/examples/: advanced-usage.md  cli-examples.md  python-examples.md
docs/getting-started/: complete-beginner-guide.md  configuration.md  installation.md  jupyter-tutorial.md  quick-start.md
docs/includes/: mkdocs.md
docs/stylesheets/: extra.css  hero.css
docs/user-guide/: basic-usage.md  batch-processing.md  cli.md  output-format.md
examples/: pmcgrab_tutorial.ipynb  quick_start.py  run_five_pmcs.py  run_three_pmcs.py
examples/advanced-usage/: index.html
examples/cli-examples/: index.html
examples/python-examples/: index.html
getting-started/complete-beginner-guide/: index.html
getting-started/configuration/: index.html
getting-started/installation/: index.html
getting-started/jupyter-tutorial/: index.html
getting-started/quick-start/: index.html
includes/mkdocs/: index.html
overrides/: home.html
pmcgrab/: README.md  __init__.py  constants.py  fetch.py  model.py  parser.py  processing.py  utils.py
scripts/: setup-dev.sh  smoke-wheel-install.sh  test_images.py  update-version.py
search/: search_index.json
src/pmcgrab/: __init__.py  __main__.py  bioc.py  constants.py  fetch.py  figure.py  http_utils.py  idconvert.py  litctxp.py  model.py  oa_service.py  oai.py  parser.py  processing.py  utils.py
src/pmcgrab/application/: __init__.py  article_assembly.py  paper_builder.py  parse_result.py  processing.py
src/pmcgrab/application/parsing/: __init__.py  content.py  contributors.py  jats_records.py  metadata.py  sections.py
src/pmcgrab/cli/: __init__.py  pmcgrab_cli.py
src/pmcgrab/common/: __init__.py  html_cleaning.py  paper_output.py  paper_view.py  serialization.py  xml_processing.py
src/pmcgrab/domain/: __init__.py  value_objects.py
src/pmcgrab/infrastructure/: __init__.py  asset_fetcher.py  settings.py
src/pmcgrab/resources/DTDs/: nlm-articleset-2.0.dtd
stylesheets/: hero.css
tests/: conftest.py  test_100_percent_coverage.py  test_application_parsing.py  test_application_processing.py  test_article_assembly.py  test_asset_fetcher.py  test_cli.py  test_cli_complete.py  test_cli_with_assets.py  test_common_utilities.py  test_comprehensive_coverage.py  test_domain_value_objects.py  test_e2e.py  test_edge_cases_comprehensive.py  test_fetch.py  test_fetch_validate.py  test_figure.py  test_html_cleaning.py  test_idconvert.py  test_integration_workflows.py  test_legacy_processing.py  test_local_xml.py  test_missing_coverage.py  test_model.py  test_network_mocking_fixes.py  test_network_modules.py  test_paper_output.py  test_parser.py  test_processing_legacy.py  test_public_api.py  test_regression_bugs.py  test_settings.py  test_utils.py  test_validate_xml.py  test_wrappers.py
user-guide/basic-usage/: index.html
user-guide/batch-processing/: index.html
user-guide/cli/: index.html
user-guide/output-format/: index.html
